Added Auto mapper and MongoDb

--- a/AccountsApi/appsettings.json
+++ b/AccountsApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AccountDatabaseSettings": {
+    "AccountCollectionName": "LedgerAccounts",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "rg-accountdb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
