--- a/AccountsApi/AccountsApi.csproj
+++ b/AccountsApi/AccountsApi.csproj
@@ -5,4 +5,13 @@
   </PropertyGroup>
 
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="mapper\" />
+    <Folder Include="Config\" />
+    <Folder Include="Config\properties\" />
+  </ItemGroup>
 </Project>
