Docker, Kubernetes and Mlabs integration
Integrated with Mlabs and deployed in kubernetes

--- a/AccountsApi/appsettings.json
+++ b/AccountsApi/appsettings.json
@@ -1,8 +1,11 @@
 {
   "AccountDatabaseSettings": {
     "AccountCollectionName": "LedgerAccounts",
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "rg-accountdb"
+    "CustomerCollectionName": "Customers",
+    // "ConnectionString": "mongodb://localhost:27017",
+    //"DatabaseName": "rg-accountdb",
+    "ConnectionString": "mongodb://nockministrator:user1@ds121716.mlab.com:21716/nodejspoc?retryWrites=false",
+    "DatabaseName": "nodejspoc"
   },
   "Logging": {
     "LogLevel": {
